body test fix: overflow-x disabled

--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ a.forgot:hover, a.seller-internet:hover {
 }
 body {
     position: relative;
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
 }
 body.welcome {
     overflow-x: hidden;
